@@ -1,6 +1,10 @@
 Unreleased
 -----------------------------------
 
+- fix issue384 by removing the trial support code
+  since the unittest compat enhancements allow
+  trial to handle it on its own
+
 - fix pexpect-3.0 compatibility for pytest's own tests.
   (fixes issue386)
 
